CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(all)

#### library paths
SET(LIBRARY_PATH "${CMAKE_SOURCE_DIR}/lib")

#### output paths
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")

#### settings
SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -g -Wno-deprecated -I/usr/local/include")
# SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE -g -O3")
SET(CMAKE_C_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -L${LIBRARY_PATH} -lpthread  -lrt")

#### projects
ADD_SUBDIRECTORY(wt)
ADD_SUBDIRECTORY(base_test)